# Cloud_Project

Edge/: pyproject.toml
Edge/src/project/: PROJECT_Cloud.py
Edge/src/project/Training_Model/: main.py
Lambda_Functions/: EmotionProcessorFunction.py  EmotionStatsFunction.py  HourStatsFunction.py  TriggerSNSFunction.py
