[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "tflite-runtime (>=2.14.0,<3.0.0)",
    "numpy (==2.1.0)",
    "awsiotsdk (>=1.22.2,<2.0.0)",
    "awsiotpythonsdk (>=1.5.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
